tests/diagnostics/expressions/matches/pattern_type_mismatch/expect.txt
# exit: 1
input/lib.coppice:2:26: error: matches pattern type 'boolean' is not in target type
      return value matches boolean
                           ^
